Tidy hybrid episode imports

--- a/MoneyOs-441288a40188a78a9c96230ba23fcf68cfb30326/app/ui/index.html
+++ b/MoneyOs-441288a40188a78a9c96230ba23fcf68cfb30326/app/ui/index.html
@@ -244,7 +244,7 @@
       finalStatus.textContent = 'In Progress';
       logTail.innerHTML = '';
 
-      const response = await fetch('/generate', { method: 'POST' });
+      const response = await fetch('/jobs/anime-episode-10m-hybrid', { method: 'POST' });
       const data = await response.json();
       const jobId = data.job_id;
 
